[tool.poetry]
name = "social_analysis"
version = "0.1.0"
description = ""
authors = ["Simone Robutti <simone.robutti@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.2.0"
pandas = "^1.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
